finish card and icon component

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "build-css":"tailwindcss build src/index.css -o public/index.css",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
