--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://lukannozadze.github.io/interactive-rating-component",
+  "homepage": "http://lukannozadze.github.io/interactive-rating-component-2",
   "name": "interactive-rating-component",
   "version": "0.1.0",
   "private": true,
@@ -9,12 +9,13 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy":"npm run build",
-     "deploy":"gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "build-css": "tailwindcss build src/index.css -o public/index.css",
